--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="profile">
                     <div id="name">
                         <h1>PRINCESS KENSHI P. QUITOR</h1>
-                        <h3>Bayot</h3>
+                        <h3>Web Designer & Developer | Artist</h3>
                     </div>
                 
                     <div class="header2">
@@ -81,6 +81,10 @@
                 <div class="experience">
                     <br>
                     <h2>No Experience yet</h2>
+                </div>
+
+                <div class="skillss">
+
                 </div>
             </div>
         </div>
