--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <div class="header2">
                         <div id="proff">
                             <h2>PROFESSIONAL SKILLS</h2>
+                            <hr class="headerline">
                         </div>
                         <div id="proskils">
                             <p>ILLUSTRATOR</p>
@@ -48,43 +49,58 @@
             <div class="info">
 
                 <div class="aboutme">
-                    <h2>ABOUT ME</h2>
-                    <p>Hello</p>
-                    <p id="BirthDate:">Birthday: October 9, 2003</p>
+                    <h2 id="aboutmee">ABOUT ME</h2>
+                    <hr class="line">
+                    <p>Hello I am Princess Kenshi P. Quitor, just call me Kenshi. I am a Digital Artist and a IT College student. Lazy person i yes am.  </p>
+                    <div id="aboutmeinfo">
+                        <p id="BirthDate:">Birthday: October 9, 2003</p>
                     <p id="Gender:">Gender: Female</p>
                     <p id="Address:">Address: Sitio San Vicente, Lahug, Cebu City</p>
                     <p id="Contact Number:">Contact Number: 0927-515-0359</p>
+                    </div>
                 </div>
 
                 <div class="education">
-                    <h2>EDUCATION</h2>
-                    <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
-                    <h3>Bachelor of Science in Information Technology | 2022-2026</h3>
-                    <p>Salinas Drive, Lahug, Cebu City</p>
-                    <br>
-                    <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
-                    <h3>Senior High School [STEM] | 2020-2022</h3>
-                    <p>Salinas Drive, Lahug, Cebu City</p>
-                    <br>
-                    <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
-                    <h3>Junior High School | 2016-2020</h3>
-                    <p>Salinas Drive, Lahug, Cebu City</p>
-                    <br>
-                    <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
-                    <h3>Elementary School | 2012-2016</h3>
-                    <br>
-                    <h2>LAHUG CHRISTIAN SCHOOL</h2>
-                    <h3>Pre-school | 2010-2012</h3>
-                    <p>Gorordo Ave, Lahug, Cebu City</p>
+                    <h2 id="educationn">EDUCATION</h2>
+                    <hr class="line">
+                    <div id="educationinfo">
+                        <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
+                        <h3>Bachelor of Science in Information Technology | 2022-2026</h3>
+                        <p>Salinas Drive, Lahug, Cebu City</p>
+                        <br>
+                        <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
+                        <h3>Senior High School [STEM] | 2020-2022</h3>
+                        <p>Salinas Drive, Lahug, Cebu City</p>
+                        <br>
+                        <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
+                        <h3>Junior High School | 2016-2020</h3>
+                        <p>Salinas Drive, Lahug, Cebu City</p>
+                        <br>
+                        <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
+                        <h3>Elementary School | 2012-2016</h3>
+                        <br>
+                        <h2>LAHUG CHRISTIAN SCHOOL</h2>
+                        <h3>Pre-school | 2010-2012</h3>
+                        <p>Gorordo Ave, Lahug, Cebu City</p>
+                    </div>
                 </div>
 
                 <div class="experience">
                     <br>
-                    <h2>No Experience yet</h2>
+                    <h2 id="experiencee">No Experience yet</h2>
+                    <hr class="line">
                 </div>
 
-                <div class="skillss">
-
+                <div class="hobbies">
+                    <br>
+                    <h2 id="hobbiess">HOBBIES</h2>
+                    <hr class="line">
+                    <div id="hobbiesinfo">
+                        <p><li>Drawing</li></p>
+                        <p><li>Sleeping</li></p>
+                        <p><li>Watching Anime</li></p>
+                        <p><li>Playing Video Games</li></p>
+                    </div>
                 </div>
             </div>
         </div>
