--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                             <p>JAVASCRIPT</p>
                             <div class="ps">
-                                <div class="skills javascript">5%</div>
+                                <div class="skills javascript">15%</div>
                             </div>
                         </div>
                     </div>
@@ -51,18 +51,21 @@
                 <div class="aboutme">
                     <h2 id="aboutmee">ABOUT ME</h2>
                     <hr class="line">
-                    <p>Hello I am Princess Kenshi P. Quitor, just call me Kenshi. I am a Digital Artist and a IT College student. Lazy person i yes am.  </p>
+                    <br>
                     <div id="aboutmeinfo">
-                        <p id="BirthDate:">Birthday: October 9, 2003</p>
-                    <p id="Gender:">Gender: Female</p>
-                    <p id="Address:">Address: Sitio San Vicente, Lahug, Cebu City</p>
-                    <p id="Contact Number:">Contact Number: 0927-515-0359</p>
+                        <p>Hello I am Princess Kenshi P. Quitor, just call me Kenshi. I am a Digital Artist and an IT College student. Lazy person i yes am.  </p>
+                        <hr class="infoline">
+                        <h5 id="BirthDate:">Birthday: October 9, 2003</h5>
+                        <h5 id="Gender:">Gender: Female</h5>
+                        <h5 id="Address:">Address: Sitio San Vicente, Lahug, Cebu City</h5>
+                        <h5 id="Contact Number:">Contact Number: 0927-515-0359</h5>
                     </div>
                 </div>
 
                 <div class="education">
                     <h2 id="educationn">EDUCATION</h2>
                     <hr class="line">
+                    <br>
                     <div id="educationinfo">
                         <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
                         <h3>Bachelor of Science in Information Technology | 2022-2026</h3>
@@ -87,19 +90,24 @@
 
                 <div class="experience">
                     <br>
-                    <h2 id="experiencee">No Experience yet</h2>
+                    <h2 id="experiencee">EXPERIENCE</h2>
                     <hr class="line">
+                    <br>
+                    <div id="experienceinfo">
+                        <h4>No Experience Yet</h4>
+                    </div>
                 </div>
 
                 <div class="hobbies">
                     <br>
                     <h2 id="hobbiess">HOBBIES</h2>
                     <hr class="line">
+                    <br>
                     <div id="hobbiesinfo">
-                        <p><li>Drawing</li></p>
-                        <p><li>Sleeping</li></p>
-                        <p><li>Watching Anime</li></p>
-                        <p><li>Playing Video Games</li></p>
+                        <h5><li>Drawing</li></h5>
+                        <h5><li>Sleeping</li></h5>
+                        <h5><li>Watching Anime</li></h5>
+                        <h5><li>Playing Video Games</li></h5>
                     </div>
                 </div>
             </div>
