--- a/index.html
+++ b/index.html
@@ -33,23 +33,24 @@
                     <h2 id="aboutmee">ABOUT ME</h2>
                     <br>
                     <div id="aboutmeinfo">
-                        <h4>Hello I am Princess Kenshi P. Quitor, just call me Kenshi. I am a Digital Artist and an IT College student. Lazy person i yes am.  </h4>
-                        <h5 id="BirthDate:">Birthday: October 9, 2003</h5>
-                        <h5 id="Gender:">Gender: Female</h5>
-                        <h5 id="Address:">Address: Sitio San Vicente, Lahug, Cebu City</h5>
-                        <h5 id="Contact Number:">Contact Number: 0927-515-0359</h5>
+                        <h3>Hello I am Princess Kenshi P. Quitor, just call me Kenshi. 
+                            I am a Digital Artist and an IT College student. Lazy person i yes am.  </h3>
+                        <h4 id="BirthDate:">Birthday: October 9, 2003</h4>
+                        <h4 id="Gender:">Gender: Female</h4>
+                        <h4 id="Address:">Address: Sitio San Vicente, Lahug, Cebu City</h4>
+                        <h4 id="Contact Number:">Contact Number: 0927-515-0359</h4>
                     </div>
                 </div>
 
                 <div class="hobbies">
                     <br>
                     <h2 id="hobbiess">HOBBIES</h2>
-                    <br>
                     <div id="hobbiesinfo">
-                        <h5><li>Drawing</li></h5>
-                        <h5><li>Sleeping</li></h5>
-                        <h5><li>Watching Anime</li></h5>
-                        <h5><li>Playing Video Games</li></h5>
+                        <h3>These are my hobbies:</h3>
+                        <h4><li>Drawing</li></h4>
+                        <h4><li>Sleeping</li></h4>
+                        <h4><li>Watching Anime</li></h4>
+                        <h4><li>Playing Video Games</li></h4>
                     </div>
                 </div>
 
@@ -104,7 +105,7 @@
                     <h2 id="experiencee">EXPERIENCE</h2>
                     <br>
                     <div id="experienceinfo">
-                        <h4>No Experience Yet</h4>
+                        <h3>No Experience Yet</h3>
                     </div>
                 </div>
 
@@ -113,7 +114,7 @@
                     <h2 id="referencee">REFERENCES</h2>
                     <br>
                     <div id="referenceinfo">
-                        <h2>No Reference/s Yet</h2>
+                        <h3>No Reference/s Yet</h3>
                     </div>
                 </div>
             </div>
