--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
                     <h2 id="aboutmee">ABOUT ME</h2>
                     <br>
                     <div id="aboutmeinfo">
-                        <h3>Hello I am Princess Kenshi P. Quitor, just call me Kenshi. 
+                        <h3>I am Princess Kenshi P. Quitor, just call me Kenshi. 
                             I am a Digital Artist and an IT College student. Lazy person i yes am.  </h3>
                         <h4 id="BirthDate:">Birthday: October 9, 2003</h4>
                         <h4 id="Gender:">Gender: Female</h4>
                         <h4 id="Address:">Address: Sitio San Vicente, Lahug, Cebu City</h4>
                         <h4 id="Contact Number:">Contact Number: 0927-515-0359</h4>
+                        <h4 id="Email:">Email: princesskenshi73@gmail.com</h4>
                     </div>
                 </div>
 
