--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
                         <div id="name">
                             <h1>Hello, I am Kenshi</h1>
                             <h3>Web Designer & Developer | Artist</h3>
-                            <h4>@himekenshi</h4>  
+                            <hr>
+                            <div class="informational">
+                                <h4 id="Gender:">Gender: Female</h4>
+                                <h4 id="Age:">Age: 20</h4>
+                                <h4 id="Contact Number:">Contact Number: 0927-515-0359</h4>
+                                <h4 id="BirthDate:">Birthday: October 9, 2003</h4>
+                                <h4 id="Address:">Address: Sitio San Vicente, Lahug, <br> Cebu City</h4>
+                                <h4 id="Email:">Email: princesskenshi73@gmail.com</h4>
+                            </div>
                         </div>     
                     </div>
                 </div>
@@ -33,13 +41,10 @@
                     <h2 id="aboutmee">ABOUT ME</h2>
                     <br>
                     <div id="aboutmeinfo">
-                        <h3>I am Princess Kenshi P. Quitor, just call me Kenshi. 
-                            I am a Digital Artist and an IT College student. Lazy person i yes am.  </h3>
-                        <h4 id="BirthDate:">Birthday: October 9, 2003</h4>
-                        <h4 id="Gender:">Gender: Female</h4>
-                        <h4 id="Address:">Address: Sitio San Vicente, Lahug, Cebu City</h4>
-                        <h4 id="Contact Number:">Contact Number: 0927-515-0359</h4>
-                        <h4 id="Email:">Email: princesskenshi73@gmail.com</h4>
+                        <h3>Hello, I am Princess Kenshi P. Quitor, but you can call me Kenshi.
+                            I'm a digital artist and 2nd year IT college student.
+                            I'm currently learning coding and exploring more things about programming.
+                            A hardworking person who wants to be a full-stack developer soon, in order to create new and more creative ideas. </h3>
                     </div>
                 </div>
 
