--- a/index.html
+++ b/index.html
@@ -16,24 +16,13 @@
         </div>
         <div class="bgimage"></div>
     
-
         <div class="layout">
             <div class="info">
                 <div class="pfp">
                     <div class="profile">
-                        <img src="https://scontent-mnl1-1.xx.fbcdn.net/v/t39.30808-6/336648301_873752613730450_320881333241351639_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeHOtyirn024oKdxXd-_hmloPQJxbH9g4sM9AnFsf2Diw1xrhZHadgdRGf091QrdmqUTa3S8aChHsAgKktRqdI-7&_nc_ohc=BP4s9RXEejUAb7GKmUa&_nc_ht=scontent-mnl1-1.xx&oh=00_AfCWIfdumqzGLjjMHc6xJqtBb6emXQGY1yIf0rhBycB19g&oe=66298123" alt="EwE">
+                        <img src="" alt="EwE" id="profile-pic">
                         <div id="name">
-                            <h1>Hello, I am Kenshi</h1>
-                            <h3>Web Designer & Developer | Artist</h3>
-                            <hr>
-                            <div class="informational">
-                                <h4 id="Gender:">Gender: Female</h4>
-                                <h4 id="Age:">Age: 20</h4>
-                                <h4 id="Contact Number:">Contact Number: 0927-515-0359</h4>
-                                <h4 id="BirthDate:">Birthday: October 9, 2003</h4>
-                                <h4 id="Address:">Address: Sitio San Vicente, Lahug, <br> Cebu City</h4>
-                                <h4 id="Email:">Email: princesskenshi73@gmail.com</h4>
-                            </div>
+                            <!-- Name and other personal info will be populated dynamically -->
                         </div>     
                     </div>
                 </div>
@@ -41,86 +30,40 @@
                     <h2 id="aboutmee">ABOUT ME</h2>
                     <br>
                     <div id="aboutmeinfo">
-                        <h3>Hello, I am Princess Kenshi P. Quitor, but you can call me Kenshi.
-                            I'm a digital artist and 2nd year IT college student.
-                            I'm currently learning coding and exploring more things about programming.
-                            A hardworking person who wants to be a full-stack developer soon, in order to create new and more creative ideas. </h3>
+                        <!-- About me description will be populated dynamically -->
                     </div>
                 </div>
 
-                <div class="hobbies">
-                    <br>
-                    <h2 id="hobbiess">HOBBIES</h2>
-                    <div id="hobbiesinfo">
-                        <h3>These are my hobbies:</h3>
-                        <h4><li>Drawing</li></h4>
-                        <h4><li>Sleeping</li></h4>
-                        <h4><li>Watching Anime</li></h4>
-                        <h4><li>Playing Video Games</li></h4>
-                    </div>
-                </div>
-
-                <div class="skils">
-                    <h2 id="profskils">PROFESSIONAL SKILLS</h2>
-                   
+                <div class="skills">
+                    <h2>PROFESSIONAL SKILLS</h2>
                     <div id="proskils">
-                        <p>ILLUSTRATOR</p>
-                        <div class="ps">
-                            <div class="skills illustrator">85%</div>
-                        </div>
-
-                        <p>HTML/CSS</p>
-                        <div class="ps">
-                            <div class="skills htmlcss">30%</div>
-                        </div>
-
-                        <p>JAVASCRIPT</p>
-                        <div class="ps">
-                            <div class="skills javascript">15%</div>
-                        </div>
+                        <!-- Skills and percentages will be populated dynamically -->
                     </div>
                 </div>
 
                 <div class="education">
-                    <h2 id="educationn">EDUCATION</h2>
+                    <h2>EDUCATION</h2>
                     <br>
                     <div id="educationinfo">
-                        <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
-                        <h3>Bachelor of Science in Information Technology | 2022-2026</h3>
-                        <p>Salinas Drive, Lahug, Cebu City</p>
-                        <br>
-                        <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
-                        <h3>Senior High School [STEM] | 2020-2022</h3>
-                        <p>Salinas Drive, Lahug, Cebu City</p>
-                        <br>
-                        <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
-                        <h3>Junior High School | 2016-2020</h3>
-                        <p>Salinas Drive, Lahug, Cebu City</p>
-                        <br>
-                        <h2>UNIVERSITY OF SOUTHERN PHILIPPINES FOUNDATION</h2>
-                        <h3>Elementary School | 2012-2016</h3>
-                        <br>
-                        <h2>LAHUG CHRISTIAN SCHOOL</h2>
-                        <h3>Pre-school | 2010-2012</h3>
-                        <p>Gorordo Ave, Lahug, Cebu City</p>
+                        <!-- Education details will be populated dynamically -->
                     </div>
                 </div>
 
                 <div class="experience">
                     <br>
-                    <h2 id="experiencee">EXPERIENCE</h2>
+                    <h2>EXPERIENCE</h2>
                     <br>
                     <div id="experienceinfo">
-                        <h3>No Experience Yet</h3>
+                        <!-- Experience details will be populated dynamically -->
                     </div>
                 </div>
 
                 <div class="reference">
                     <br>
-                    <h2 id="referencee">REFERENCES</h2>
+                    <h2>REFERENCES</h2>
                     <br>
                     <div id="referenceinfo">
-                        <h3>No Reference/s Yet</h3>
+                        <!-- Reference details will be populated dynamically -->
                     </div>
                 </div>
             </div>
