--- a/index.html
+++ b/index.html
@@ -3,73 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Kenshi's Resume</title>
+    <title>Profile</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1, h2, h3 {
+            margin-bottom: 10px;
+        }
+        ul {
+            margin-top: 0;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="bgimage"></div>
-        <div class="header">
-            <img src="https://scontent-mnl1-1.xx.fbcdn.net/v/t39.30808-6/336648301_873752613730450_320881333241351639_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeHOtyirn024oKdxXd-_hmloPQJxbH9g4sM9AnFsf2Diw1xrhZHadgdRGf091QrdmqUTa3S8aChHsAgKktRqdI-7&_nc_ohc=BP4s9RXEejUAb7GKmUa&_nc_ht=scontent-mnl1-1.xx&oh=00_AfCWIfdumqzGLjjMHc6xJqtBb6emXQGY1yIf0rhBycB19g&oe=66298123" alt="EwE">
-            <h1 class="hello">Hello Everyone! Welcome to my CuriviTAE</h1>
-            <h3 class="click">Click me!</h3>
-        </div>
-        <div class="bgimage"></div>
-    
-        <div class="layout">
-            <div class="info">
-                <div class="pfp">
-                    <div class="profile">
-                        <img src="" alt="EwE" id="profile-pic">
-                        <div id="name">
-                            <!-- Name and other personal info will be populated dynamically -->
-                        </div>     
-                    </div>
-                </div>
-                <div class="aboutme">
-                    <h2 id="aboutmee">ABOUT ME</h2>
-                    <br>
-                    <div id="aboutmeinfo">
-                        <!-- About me description will be populated dynamically -->
-                    </div>
-                </div>
 
-                <div class="skills">
-                    <h2>PROFESSIONAL SKILLS</h2>
-                    <div id="proskils">
-                        <!-- Skills and percentages will be populated dynamically -->
-                    </div>
-                </div>
+<h1>Education</h1>
+<h2 id="degree"></h2>
+<p id="year"></p>
+<p id="university"></p>
 
-                <div class="education">
-                    <h2>EDUCATION</h2>
-                    <br>
-                    <div id="educationinfo">
-                        <!-- Education details will be populated dynamically -->
-                    </div>
-                </div>
+<h1>Skills</h1>
+<ul id="skills"></ul>
 
-                <div class="experience">
-                    <br>
-                    <h2>EXPERIENCE</h2>
-                    <br>
-                    <div id="experienceinfo">
-                        <!-- Experience details will be populated dynamically -->
-                    </div>
-                </div>
+<h1>Experience</h1>
+<ul id="experience"></ul>
 
-                <div class="reference">
-                    <br>
-                    <h2>REFERENCES</h2>
-                    <br>
-                    <div id="referenceinfo">
-                        <!-- Reference details will be populated dynamically -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<h1>Awards and Achievements</h1>
+<ul id="awards"></ul>
 
-    <script src="script.js"></script>
+<h1>Contact Information</h1>
+<p id="name"></p>
+<p id="address"></p>
+<p id="phoneNumber"></p>
+<p id="email"></p>
+<p id="birthdate"></p>
+<p id="sex"></p>
+
+<script>
+    fetch('https://last-try-y2dp.onrender.com/')
+    .then(response => response.json())
+    .then(data => {
+        document.getElementById('degree').innerText = data.education.degree;
+        document.getElementById('year').innerText = data.education.year;
+        document.getElementById('university').innerText = data.education.university;
+
+        const skillsList = document.getElementById('skills');
+        data.skills.forEach(skill => {
+            const li = document.createElement('li');
+            li.innerText = skill;
+            skillsList.appendChild(li);
+        });
+
+        const experienceList = document.getElementById('experience');
+        data.experience.forEach(exp => {
+            const li = document.createElement('li');
+            li.innerText = exp;
+            experienceList.appendChild(li);
+        });
+
+        const awardsList = document.getElementById('awards');
+        data.awards.forEach(award => {
+            const li = document.createElement('li');
+            li.innerText = award;
+            awardsList.appendChild(li);
+        });
+
+        document.getElementById('name').innerText = data.personalInfo.name;
+        document.getElementById('address').innerText = data.personalInfo.address;
+        document.getElementById('phoneNumber').innerText = data.personalInfo.phoneNumber;
+        document.getElementById('email').innerText = data.personalInfo.email;
+        document.getElementById('birthdate').innerText = data.personalInfo.birthdate;
+        document.getElementById('sex').innerText = data.personalInfo.sex;
+    })
+    .catch(error => {
+        console.error('Error fetching data:', error);
+    });
+</script>
+
 </body>
 </html>
