--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
 <script>
-    fetch('https://last-try-y2dp.onrender.com/')
+    fetch('https://noderesume.onrender.com/')
     .then(response => response.json())
     .then(data => {
         document.getElementById('name').innerText = data.personalInfo.name;
