--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p id="birthdate">Birthday:</p>
 <p id="gender">Gender:</p>
 <p id="age">Age:</p>
-<p id="address">Address:</p>
+<p id="homeaddress">Address:</p>
 <p id="phoneNumber">Contact Number:</p>
 <p id="email">Email:</p>
 
@@ -58,7 +58,7 @@
         document.getElementById('birthdate').innerText = data.personalInfo.birthdate;
         document.getElementById('gender').innerText = data.personalInfo.gender;
         document.getElementById('age').innerText = data.personalInfo.age;
-        document.getElementById('address').innerText = data.personalInfo.address;
+        document.getElementById('homeaddress').innerText = data.personalInfo.address;
         document.getElementById('phoneNumber').innerText = data.personalInfo.phoneNumber;
         document.getElementById('email').innerText = data.personalInfo.email;
 
