--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                 <div class="profile">
                     <img src="https://scontent-mnl1-1.xx.fbcdn.net/v/t39.30808-6/336648301_873752613730450_320881333241351639_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeHOtyirn024oKdxXd-_hmloPQJxbH9g4sM9AnFsf2Diw1xrhZHadgdRGf091QrdmqUTa3S8aChHsAgKktRqdI-7&_nc_ohc=BP4s9RXEejUAb7GKmUa&_nc_ht=scontent-mnl1-1.xx&oh=00_AfCWIfdumqzGLjjMHc6xJqtBb6emXQGY1yIf0rhBycB19g&oe=66298123" alt="EwE">
                     
-                        <h1 id="name">Name:</h1>
+                        <h1 id="name">Name</h1>
                         
                     <div class="information">
-                        <p id="birthdate">Birthday:</p>
-                        <p id="gender">Gender:</p>
-                        <p id="age">Age:</p>
-                        <p id="address">Address:</p>
-                        <p id="phoneNumber">Contact Number:</p>
-                        <p id="email">Email:</p>
+                        <p id="birthdate">Birthday</p>
+                        <p id="gender">Gender</p>
+                        <p id="age">Age</p>
+                        <p id="address">Address</p>
+                        <p id="phoneNumber">Contact Number</p>
+                        <p id="email">Email</p>
                     </div>
                 </div>
 
