--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
                 <div class="profile">
                     <img src="https://scontent-mnl1-1.xx.fbcdn.net/v/t39.30808-6/336648301_873752613730450_320881333241351639_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeHOtyirn024oKdxXd-_hmloPQJxbH9g4sM9AnFsf2Diw1xrhZHadgdRGf091QrdmqUTa3S8aChHsAgKktRqdI-7&_nc_ohc=BP4s9RXEejUAb7GKmUa&_nc_ht=scontent-mnl1-1.xx&oh=00_AfCWIfdumqzGLjjMHc6xJqtBb6emXQGY1yIf0rhBycB19g&oe=66298123" alt="EwE">
                     
-                        <h1 id="name">Name</h1>
-                        <h2 id="fjob">fJob</h2>
+                    <h1 id="name">Name</h1>
+                    <h2 id="fjob">fJob</h2>
+
+                    <hr class="line">
                     <div class="information">
                         <p id="birthdate">Birthday</p>
                         <p id="gender">Gender</p>
@@ -65,7 +67,7 @@
 
                 <h1 id="referencee">References</h1>
                 <div id="referenceinfo">
-                    <p id="references"></p>
+                    <div id="references"></div>
                 </div>
             </div>
         </div>
